--- a/Kinesso_Project.ipynb
+++ b/Kinesso_Project.ipynb
@@ -20,6 +20,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Importing data:\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -305,25 +312,14 @@
    "source": [
     "# Q1 - Import data\n",
     "df = pd.read_excel('toy_sales_data.xlsx')\n",
+    "print('Importing data:')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "55c97cdc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Q1 - Import data\n",
-    "df = pd.read_excel('toy_sales_data.xlsx')\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "aabfc726",
+   "execution_count": 3,
+   "id": "bd4b7def",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +378,7 @@
        "2 2018-03-01   1350000         400000"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "id": "13f538fe",
    "metadata": {},
    "outputs": [
@@ -432,23 +428,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "c45df2d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import Libraries for Linear Regression:\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "import statsmodels.api as sm\n",
-    "\n",
-    "# Assign values of X, y for Linear Regression:\n",
-    "X, y = df[['tv_spend', 'digital_spend']], df['sales']#[[\"sales\", \"wt\", \"drat\", \"qsec\"]], df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "e05979e1",
+   "execution_count": 5,
+   "id": "ed6e108b",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +442,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.559\n",
       "Method:                 Least Squares   F-statistic:                     15.55\n",
       "Date:                Tue, 05 Dec 2023   Prob (F-statistic):           7.17e-05\n",
-      "Time:                        20:10:32   Log-Likelihood:                -386.91\n",
+      "Time:                        21:12:10   Log-Likelihood:                -386.91\n",
       "No. Observations:                  24   AIC:                             779.8\n",
       "Df Residuals:                      21   BIC:                             783.4\n",
       "Df Model:                           2                                         \n",
@@ -487,8 +468,16 @@
     }
    ],
    "source": [
-    "# Creating Summary Table of an Ordinary Least Squares regression to show Adj. R-Squared, p-values\n",
+    "# Preparing for Questions 3-6\n",
     "\n",
+    "# Import Libraries for Linear Regression:\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Assign values of X, y for Linear Regression:\n",
+    "X, y = df[['tv_spend', 'digital_spend']], df['sales']#[[\"sales\", \"wt\", \"drat\", \"qsec\"]], df\n",
+    "\n",
+    "# Creating Summary Table of an Ordinary Least Squares regression to show Adj. R-Squared, p-values\n",
     "# Adding a constant to the model (for intercept)\n",
     "X_sm = sm.add_constant(X)\n",
     "# Fitting the model\n",
@@ -499,8 +488,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "bfd57967",
+   "execution_count": 6,
+   "id": "dfecc340",
    "metadata": {},
    "outputs": [
     {
@@ -513,13 +502,13 @@
    ],
    "source": [
     "# Q3 - Showing Adj. R-squared (Top right section)\n",
-    "print('Adj. R-Squared = ' + str(model_sm.rsquared_adj) + '. That means the independent variables in the model accounts for 55.9% of the differences in the dependent variable (Sales)')"
+    "print('We have an Adj. R-Squared of ' + str(model_sm.rsquared_adj) + '. That means the independent variables in the model accounts for 55.9% of the differences in the dependent variable (Sales)')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "1cee8a65",
+   "execution_count": 7,
+   "id": "0ecb28e2",
    "metadata": {},
    "outputs": [
     {
@@ -527,21 +516,21 @@
      "output_type": "stream",
      "text": [
       "We have P-values of 0.010 and 0.000 for TV Spend and Digital Spend respectively.\n",
-      "This is a very low value and means it is highly statistically significant.\n",
-      "This is generally low figure. If p-value is below specified threshold of experiment (eg. 0.05),the null hypothesis would be rejected.\n"
+      "These are both low values and means both these independent variables are highly statistically significant.\n",
+      "In an experiment format, if p-value is below specified threshold (eg. 0.05),the null hypothesis would be rejected.\n"
      ]
     }
    ],
    "source": [
     "# Q4 - p-value / Statistical Significance (P>|t|):\n",
     "print('We have P-values of 0.010 and 0.000 for TV Spend and Digital Spend respectively.')\n",
-    "print('This is a very low value and means it is highly statistically significant.')\n",
-    "print('This is generally low figure. If p-value is below specified threshold of experiment (eg. 0.05),the null hypothesis would be rejected.')"
+    "print('These are both low values and means both these independent variables are highly statistically significant.')\n",
+    "print('In an experiment format, if p-value is below specified threshold (eg. 0.05),the null hypothesis would be rejected.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "id": "09829dcf",
    "metadata": {},
    "outputs": [
@@ -549,8 +538,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "With a coefficient of 1.73, this means that every $1 of spend, it should return $1.73 of revenue or a 173% return.\n",
-      "If we do some calculations to deduct the cost of the spend from that percentage, we can attain the ROI value of 73%\n"
+      "With a coefficient of 1.73, this means that every $1 of TV spend, it should return $1.73 of revenue or a 173% return.\n",
+      "If we do some calculations to deduct the cost of the spend from that percentage, we can attain a TV Spend ROI of 73%\n"
      ]
     }
    ],
@@ -560,16 +549,14 @@
     "\n",
     "# Extracting coefficient\n",
     "coeff_tv = model_sm.params['tv_spend']  # Coefficient of x1\n",
-    "coeff_digital = model_sm.params['digital_spend']  \n",
-    "coeff_const = model_sm.params['const']  \n",
-    "print('With a coefficient of {:.2f}, this means that every $1 of spend, it should return ${:.2f} of revenue or a {:.0f}% return.'.format(coeff_tv,coeff_tv, coeff_tv*100))\n",
-    "print('If we do some calculations to deduct the cost of the spend from that percentage, we can attain the ROI value of {:.0f}%'.format((coeff_tv-1)*100))"
+    "print('With a coefficient of {:.2f}, this means that every $1 of TV spend, it should return ${:.2f} of revenue or a {:.0f}% return.'.format(coeff_tv,coeff_tv, coeff_tv*100))\n",
+    "print('If we do some calculations to deduct the cost of the spend from that percentage, we can attain a TV Spend ROI of {:.0f}%'.format((coeff_tv-1)*100))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "f2dfd39a",
+   "execution_count": 9,
+   "id": "e37e04ac",
    "metadata": {},
    "outputs": [
     {
@@ -599,25 +586,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "cd7a361a",
+   "execution_count": null,
+   "id": "9258da5d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "More breakdowns of the spend by channels, and longer timespan (more data points).\n",
-      "Respectively, this would allow us to go into greater analytical detail and conduct breakdowns, as well as allow us to develop more reliable models\n",
-      "With a larger dataset, this may reduce overfitting or over-extrapolation.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q8 - In your opinion what additional data would improve your model and why?\n",
     "print('More breakdowns of the spend by channels, and longer timespan (more data points).')\n",
-    "print('Respectively, this would allow us to go into greater analytical detail and conduct breakdowns, as well as allow us to develop more reliable models')\n",
-    "print('With a larger dataset, this may reduce overfitting or over-extrapolation.')"
+    "print('Respectively, this would allow us to go into greater analytical detail, as well as allow us to develop more reliable models.)\n",
+    "print('With a larger dataset, this may reduce the probability of overfitting or over-extrapolation.')"
    ]
   }
  ],
