--- a/Kinesso_Project.ipynb
+++ b/Kinesso_Project.ipynb
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bd4b7def",
+   "id": "97bd5830",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ed6e108b",
+   "id": "35a6c905",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.559\n",
       "Method:                 Least Squares   F-statistic:                     15.55\n",
       "Date:                Tue, 05 Dec 2023   Prob (F-statistic):           7.17e-05\n",
-      "Time:                        21:12:10   Log-Likelihood:                -386.91\n",
+      "Time:                        21:21:35   Log-Likelihood:                -386.91\n",
       "No. Observations:                  24   AIC:                             779.8\n",
       "Df Residuals:                      21   BIC:                             783.4\n",
       "Df Model:                           2                                         \n",
@@ -489,32 +489,35 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dfecc340",
+   "id": "4768b705",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adj. R-Squared = 0.5586160564825517. That means the independent variables in the model accounts for 55.9% of the differences in the dependent variable (Sales)\n"
+      "Referencing the summary table above:\n",
+      "We have an Adj. R-Squared of 0.5586160564825517. That means the independent variables in the model accounts for 55.9% of the differences in the dependent variable (Sales)\n"
      ]
     }
    ],
    "source": [
-    "# Q3 - Showing Adj. R-squared (Top right section)\n",
+    "# Q3 - Showing Adj. R-squared (Top right section):\n",
+    "print('Referencing the summary table above:')\n",
     "print('We have an Adj. R-Squared of ' + str(model_sm.rsquared_adj) + '. That means the independent variables in the model accounts for 55.9% of the differences in the dependent variable (Sales)')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0ecb28e2",
+   "id": "860ed6d9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Referencing the summary table above:\n",
       "We have P-values of 0.010 and 0.000 for TV Spend and Digital Spend respectively.\n",
       "These are both low values and means both these independent variables are highly statistically significant.\n",
       "In an experiment format, if p-value is below specified threshold (eg. 0.05),the null hypothesis would be rejected.\n"
@@ -523,6 +526,7 @@
    ],
    "source": [
     "# Q4 - p-value / Statistical Significance (P>|t|):\n",
+    "print('Referencing the summary table above:')\n",
     "print('We have P-values of 0.010 and 0.000 for TV Spend and Digital Spend respectively.')\n",
     "print('These are both low values and means both these independent variables are highly statistically significant.')\n",
     "print('In an experiment format, if p-value is below specified threshold (eg. 0.05),the null hypothesis would be rejected.')"
@@ -556,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e37e04ac",
+   "id": "8df30339",
    "metadata": {},
    "outputs": [
     {
@@ -586,14 +590,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9258da5d",
+   "execution_count": 10,
+   "id": "ba867636",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "More breakdowns of the spend data by channels, and longer timespan of datapoints (ie. more rows) would help improve the model.\n",
+      "Respectively, this would allow us to go into greater analytical detail, as well as allow us to develop more reliable models.\n",
+      "With a larger dataset, this may reduce the probability of overfitting or over-extrapolation.\n"
+     ]
+    }
+   ],
    "source": [
     "# Q8 - In your opinion what additional data would improve your model and why?\n",
-    "print('More breakdowns of the spend by channels, and longer timespan (more data points).')\n",
-    "print('Respectively, this would allow us to go into greater analytical detail, as well as allow us to develop more reliable models.)\n",
+    "print('More breakdowns of the spend data by channels, and longer timespan of datapoints (ie. more rows) would help improve the model.')\n",
+    "print('Respectively, this would allow us to go into greater analytical detail, as well as allow us to develop more reliable models.')\n",
     "print('With a larger dataset, this may reduce the probability of overfitting or over-extrapolation.')"
    ]
   }
