--- a/Kinesso_Project.ipynb
+++ b/Kinesso_Project.ipynb
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "97bd5830",
+   "id": "43b80e24",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "35a6c905",
+   "id": "080845af",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.559\n",
       "Method:                 Least Squares   F-statistic:                     15.55\n",
       "Date:                Tue, 05 Dec 2023   Prob (F-statistic):           7.17e-05\n",
-      "Time:                        21:21:35   Log-Likelihood:                -386.91\n",
+      "Time:                        21:29:20   Log-Likelihood:                -386.91\n",
       "No. Observations:                  24   AIC:                             779.8\n",
       "Df Residuals:                      21   BIC:                             783.4\n",
       "Df Model:                           2                                         \n",
@@ -489,7 +489,32 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4768b705",
+   "id": "4d186e78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Referencing the summary table above:\n",
+      "We have a coefficient of tv_spend at 1.7315 and coefficient of digital_spend at 4.4692.\n",
+      "Whilst both are positively correlated, digital_spend has a substantially higher correlation with sales than tv_spend.\n",
+      "Indeed, digital_spend has a correlation that is almost 3 times higher than tv_spend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q3 - Correlations among sales, TV, and Digital investment\n",
+    "print('Referencing the summary table above:')\n",
+    "print('We have a coefficient of tv_spend at 1.7315 and coefficient of digital_spend at 4.4692.')\n",
+    "print('Whilst both are positively correlated, digital_spend has a substantially higher correlation with sales than tv_spend.')\n",
+    "print('Indeed, digital_spend has a correlation that is almost 3 times higher than tv_spend.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a409f39c",
    "metadata": {},
    "outputs": [
     {
@@ -502,15 +527,15 @@
     }
    ],
    "source": [
-    "# Q3 - Showing Adj. R-squared (Top right section):\n",
+    "# Q4a - Showing Adj. R-squared (Top right section):\n",
     "print('Referencing the summary table above:')\n",
     "print('We have an Adj. R-Squared of ' + str(model_sm.rsquared_adj) + '. That means the independent variables in the model accounts for 55.9% of the differences in the dependent variable (Sales)')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "860ed6d9",
+   "execution_count": 8,
+   "id": "42be55fd",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +550,7 @@
     }
    ],
    "source": [
-    "# Q4 - p-value / Statistical Significance (P>|t|):\n",
+    "# Q4b - p-value / Statistical Significance (P>|t|):\n",
     "print('Referencing the summary table above:')\n",
     "print('We have P-values of 0.010 and 0.000 for TV Spend and Digital Spend respectively.')\n",
     "print('These are both low values and means both these independent variables are highly statistically significant.')\n",
@@ -534,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "09829dcf",
    "metadata": {},
    "outputs": [
@@ -559,8 +584,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8df30339",
+   "execution_count": 10,
+   "id": "d6ceba8c",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +599,7 @@
     }
    ],
    "source": [
-    "# Q7 - Using the planned spend values for the first 3 months of 2018 and your regressions model, calculate the expected sales value for the first 3 months of 2018\n",
+    "# Q7 - Using the planned spend values for the first 3 months of 2018 and your regression model, calculate the expected sales value for the first 3 months of 2018\n",
     "model = LinearRegression()\n",
     "model.fit(X, y)\n",
     "\n",
@@ -590,8 +615,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "ba867636",
+   "execution_count": 11,
+   "id": "bdfe1ea3",
    "metadata": {},
    "outputs": [
     {
